--- a/7.2 CSS Positioning/index.html
+++ b/7.2 CSS Positioning/index.html
@@ -1,3 +1,5 @@
+<!-- Done On 29/12/2023 -->
+
 <!DOCTYPE html>
 <html>
 
@@ -5,6 +7,24 @@
   <title>CSS Positioning Exercise</title>
   <style>
     /* Write your code here */
+    .blue-box {
+      background-color: blue;
+      height: 300px;
+      width: 500px;
+      position: relative;
+      left: 200px;
+      top: 200px;
+    }
+
+    .red-circle {
+      background-color: red;
+      height: 200px;
+      width: 200px;
+      border-radius: 50%;
+      position: absolute;
+      left: 250px;
+      top: 150px;
+    }
   </style>
 </head>
 
