--- a/7.3 CSS Flag Project/index.html
+++ b/7.3 CSS Flag Project/index.html
@@ -1,3 +1,5 @@
+<!-- Done On 29/12/2023 -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,7 +8,45 @@
   <title>CSS Flag Project</title>
   <style>
     /* Write your CSS Code here */
-    
+    .flag {
+      background-color: #CE1126;
+      width: 900px;
+      height: 600px;
+      position: relative;
+    }
+
+    .flag > div {
+      background-color: #002868;
+      height: 300px;
+      width: 100%;
+      z-index: 1;
+      position: absolute;
+      top: 150px;
+      bottom: 150px;
+    }
+
+    .flag > div > div {
+      background-color: white;
+      height: 200px;
+      width: 200px;
+      border-radius: 50%;
+      position: absolute;
+      top: 50px;
+      left: 350px;
+    }
+
+    p {
+      font-size: 5rem;
+      color: white;
+      text-align: center;
+      padding: 0;
+      margin: 0;
+    }
+
+    .flag > div div p {
+      color: black;
+      text-align: center;
+    }
   </style>
 </head>
 
