Web Development Bootcamp

--- a/8.0 CSS Display/index.html
+++ b/8.0 CSS Display/index.html
@@ -15,20 +15,34 @@
     }
 
     .red {
-      display: block;
+      display: inline-block;
       width: 200px;
       height: 200px;
       background-color: red;
     }
 
-    .green {
-      display: inline;
+    .green-h {
+      display: inline-block;
       width: 200px;
       height: 200px;
       background-color: green;
     }
 
-    .blue {
+    .blue-h {
+      display: inline-block;
+      width: 200px;
+      height: 200px;
+      background-color: blue;
+    }
+
+    .green-v {
+      display: block;
+      width: 200px;
+      height: 200px;
+      background-color: green;
+    }
+
+    .blue-v {
       display: inline-block;
       width: 200px;
       height: 200px;
@@ -41,8 +55,10 @@
 <body>
   <h1>CSS Display Property</h1>
   <p class="red">Red Paragraph </p>
-  <p class="green">Green Paragraph</p>
-  <p class="blue">Blue Paragraph</p>
+  <p class="green-h">Green Paragraph</p>
+  <p class="blue-h">Blue Paragraph</p>
+  <p class="green-v">Green Paragraph</p>
+  <p class="blue-v">Blue Paragraph</p>
 </body>
 
 </html>
