--- a/9.0 Display Flex/index.html
+++ b/9.0 Display Flex/index.html
@@ -1,3 +1,5 @@
+<!-- Done On 31/12/2023 -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -17,6 +19,8 @@
     }
 
     .container {
+      display: flex;
+      gap: 10px;
       padding: 10px;
       background-color: gold;
     }
