Web Development Bootcamp

--- a/Section 10 - Grid/10.2 Grid Placement/exercise2.html
+++ b/Section 10 - Grid/10.2 Grid Placement/exercise2.html
@@ -1,3 +1,5 @@
+<!-- Done On 01/01/2024 -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -38,9 +40,9 @@
     .astronaut {
       background-color: #03989E;
       order: 1;
-
+      
       /* TODO: Make the astronaut box look like the goal2 image. */
-
+      grid-column: span 2;
     }
   </style>
 </head>
