--- a/Section 10 - Grid/10.0 Display Grid/index.html
+++ b/Section 10 - Grid/10.0 Display Grid/index.html
@@ -1,9 +1,29 @@
+<!-- Done on 01/01/2023 -->
+
 <!DOCTYPE html>
 <html>
 
 <head>
   <title>Chessboard</title>
   <style>
+    .container {
+      width: 400px;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    }
+
+    .white {
+      height: 50px;
+      width: 50px;
+      background-color: #f0d9b5;
+    }
+
+    .black {
+      height: 50px;
+      width: 50px;
+      background-color: #b58863;
+    }
     /* Write your code here */
     /* Each square should be 100px by 100px */
     /* My colours for white: #f0d9b5, black: #b58863 */
