--- a/Section 10 - Grid/10.2 Grid Placement/exercise1.html
+++ b/Section 10 - Grid/10.2 Grid Placement/exercise1.html
@@ -1,3 +1,5 @@
+<!-- Done on 01/01/2023 -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -27,6 +29,9 @@
       /* TODO: Use Flexbox to align the text to the center horizontally and vertically. 
       See goal1 image.
       */
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   </style>
 </head>
