--- a/Section 10 - Grid/10.2 Grid Placement/exercise3.html
+++ b/Section 10 - Grid/10.2 Grid Placement/exercise3.html
@@ -1,3 +1,5 @@
+<!-- Done on 01/01/2023 -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -45,6 +47,7 @@
       background-color: #E58331;
       /* TODO: Make the book div look like 
       the goal3 image using grid-row. */
+      grid-row: span 2;
     }
   </style>
 </head>
